--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-safe-area-context": "^4.1.0",
+    "react-native-screens": "^3.13.0",
+    "react-native-vector-icons": "^9.1.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
