--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext {
+        googlePlayServices = "+"
+        firebaseVersion = "+"
         buildToolsVersion = "30.0.2"
         minSdkVersion = 21
         compileSdkVersion = 30
@@ -17,6 +19,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
