--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+        playServicesVersion = "17.0.0" // or find latest version
+        androidMapsUtilsVersion = "2.3.0"
     }
     repositories {
         google()
@@ -14,6 +16,8 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
+        classpath("com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:1.2.0")
+        
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
