--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.8",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-maps": "^0.30.1",
     "react-native-safe-area-context": "^4.1.0",
     "react-native-screens": "^3.13.0",
     "react-native-vector-icons": "^9.1.0",
