--- a/api/SzopAPI/SzopAPI/SzopAPI.csproj
+++ b/api/SzopAPI/SzopAPI/SzopAPI.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
   </ItemGroup>
 </Project>
