--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         ndkVersion = "21.4.7075529"
         playServicesVersion = "17.0.0" // or find latest version
         androidMapsUtilsVersion = "2.3.0"
+        kotlinVersion = '1.6.10'
     }
     repositories {
         google()
