--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.1.0",
     "react-native-screens": "^3.13.0",
+    "react-native-scrollable-navigation-bar": "^3.0.5",
     "react-native-vector-icons": "^9.1.0",
     "react-navigation": "^4.4.4",
     "styled-components": "^5.3.3"
