Changes made for building a release apk

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -137,7 +137,6 @@ def nativeArchitectures = project.getProperties().get("reactNativeDebugArchitect
 
 android {
     ndkVersion rootProject.ext.ndkVersion
-
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
@@ -156,6 +155,12 @@ android {
         }
     }
     signingConfigs {
+        release {
+            storeFile file('gdzie_jest_szop.keystore')
+            storePassword 'your_key_store_password'
+            keyAlias 'your_key_alias'
+            keyPassword 'your_key_file_alias_password'
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -175,6 +180,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.release
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
