Changed style of map overlay and add permision to use google maps app

--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -44,4 +44,7 @@
         </intent-filter>
       </activity>
     </application>
+    <queries>
+      <package android:name="com.google.android.apps.maps" />
+    </queries>
 </manifest>
