--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,13 +7,16 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "generate-licenses": "npm-license-crawler --onlyDirectDependencies --production --omitVersion --json src/constants/licenses.json",
+    "postinstall": "npm run generate-licenses"
   },
   "dependencies": {
     "@nozbe/watermelondb": "^0.24.0",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "npm-license-crawler": "^0.2.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-collapsible": "^1.6.0",
